--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.main.banner-mode=off
 
+server.port=8090
+
+spring.application.name=inventoryapp
+spring.output.ansi.enabled=always
+
 
 spring.datasource.url=jdbc:mysql://localhost:3306/inventory
 spring.datasource.username=root
