--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.application.name=inventoryapp
 spring.output.ansi.enabled=always
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/inventory
+spring.datasource.url=jdbc:mysql://localhost:3306/inventorydb
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
